[package]
name = "pyo3-filelike"
version = "0.4.2"
edition = "2021"
description = "Rust access to Python file-like objects"
license = "Apache-2.0"
repository = "https://github.com/jelmer/pyo3-filelike"

[dependencies]
pyo3 = ">=0.24, <0.26"

[dev-dependencies]
pyo3 = { version = "*", features = ["auto-initialize", "abi3"] }
